# app/Http/Controllers/Swagger/OperationController.php
@@ -20,7 +20,6 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="code", type="string", example="Some code"),
  *             @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *             @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *             @OA\Property(property="designation", type="string", example="Some designation"),
  *             @OA\Property(property="description", type="string", example="Some description"),
  *             @OA\Property(property="document_section", type="string", example="Some document section"),
  *             @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
@@ -44,7 +43,6 @@ use App\Http\Controllers\Controller;
  *                 @OA\Property(property="code", type="string", example="Some code"),
  *                 @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *                 @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *                 @OA\Property(property="designation", type="string", example="Some designation"),
  *                 @OA\Property(property="description", type="string", example="Some description"),
  *                 @OA\Property(property="document_section", type="string", example="Some document section"),
  *                 @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
@@ -73,7 +71,6 @@ use App\Http\Controllers\Controller;
  *                     @OA\Property(property="code", type="string", example="Some code"),
  *                     @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *                     @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *                     @OA\Property(property="designation", type="string", example="Some designation"),
  *                     @OA\Property(property="description", type="string", example="Some description"),
  *                     @OA\Property(property="document_section", type="string", example="Some document section"),
  *                     @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
@@ -94,7 +91,6 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="code", type="string", example="Some code"),
  *             @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *             @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *             @OA\Property(property="designation", type="string", example="Some designation"),
  *             @OA\Property(property="description", type="string", example="Some description"),
  *             @OA\Property(property="document_section", type="string", example="Some document section"),
  *             @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
@@ -131,7 +127,6 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="code", type="string", example="Some code"),
  *             @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *             @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *             @OA\Property(property="designation", type="string", example="Some designation"),
  *             @OA\Property(property="description", type="string", example="Some description"),
  *             @OA\Property(property="document_section", type="string", example="Some document section"),
  *             @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
@@ -155,7 +150,6 @@ use App\Http\Controllers\Controller;
  *                 @OA\Property(property="code", type="string", example="Some code"),
  *                 @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *                 @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *                 @OA\Property(property="designation", type="string", example="Some designation"),
  *                 @OA\Property(property="description", type="string", example="Some description"),
  *                 @OA\Property(property="document_section", type="string", example="Some document section"),
  *                 @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
@@ -192,7 +186,6 @@ use App\Http\Controllers\Controller;
  *                     @OA\Property(property="code", type="string", example="Some code for edit"),
  *                     @OA\Property(property="imperative_name", type="string", example="Some imperative name for edit"),
  *                     @OA\Property(property="verbal_name", type="string", example="Some verbal name for edit"),
- *                     @OA\Property(property="designation", type="string", example="Some designation for edit"),
  *                     @OA\Property(property="description", type="string", example="Some description for edit"),
  *                     @OA\Property(property="document_section", type="string", example="Some document section for edit"),
  *                     @OA\Property(property="document_subsection", type="string", example="Some document subsection for edit"),
@@ -213,7 +206,6 @@ use App\Http\Controllers\Controller;
  *             @OA\Property(property="code", type="string", example="Some code"),
  *             @OA\Property(property="imperative_name", type="string", example="Some imperative name"),
  *             @OA\Property(property="verbal_name", type="string", example="Some verbal name"),
- *             @OA\Property(property="designation", type="string", example="Some designation"),
  *             @OA\Property(property="description", type="string", example="Some description"),
  *             @OA\Property(property="document_section", type="string", example="Some document section"),
  *             @OA\Property(property="document_subsection", type="string", example="Some document subsection"),
